Disabled automatic window selection and hover click during image capture

--- a/sharex/sharex-portable/ShareX/ApplicationConfig.json
+++ b/sharex/sharex-portable/ShareX/ApplicationConfig.json
@@ -119,8 +119,8 @@
         "RegionCaptureActionMiddleClick": "SwapToolType",
         "RegionCaptureActionX1Click": "CaptureFullscreen",
         "RegionCaptureActionX2Click": "CaptureActiveMonitor",
-        "DetectWindows": true,
-        "DetectControls": true,
+        "DetectWindows": false,
+        "DetectControls": false,
         "UseDimming": true,
         "UseCustomInfoText": false,
         "CustomInfoText": "X: $x, Y: $y$nR: $r, G: $g, B: $b$nHex: $hex",
